...
    "tutorial.lesson.start" : {
      "extractionState" : "stale",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Spielteil starten"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Start lesson"
...
